Thu Jul 03 18:40:52 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * tests/DCPS/Compiler/idl_test1_lib/FooDef.idl:
        * tests/DCPS/Compiler/idl_test3_lib/FooDef.idl:

          Removed anonymous array declarations from structs.

Thu Jul 03 17:57:12 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * dds/DdsDcpsInfrastructure.idl:
        * examples/DCPS/DistributedContent/FileInfo.idl:
        * performance-tests/DCPS/TCPProfilingTest/testMessage.idl:
        * performance-tests/DCPS/TypeNoKeyBounded/PTDef.idl:
        * tests/DCPS/Compiler/idl_test1_lib/FooDef.idl:
        * tests/DCPS/FooType5/FooDef.idl:

          Removed anonymous types from the idl structs.

Thu Jul  3 16:20:53 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:
        
          Fixed a warning.

Thu Jul  3 00:33:05 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/Reconnect/README:

          Updated the patch for reproduce and verify RT11348 fix.

Thu Jul  3 00:28:51 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        Fixed a race condition described in RT11348. The commit
        at "Fri Jun 27 19:42:06 UTC 2008  Yan Dai  <dai_y@ociweb.com>"
        broke some tests. This time the fix was fully tested.

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:

          Added pub_map_releasing_ and sub_map_releasing_ to save the snapshot
          of associations in datalink at the time the link is declared for releasing
          resource due to connection problem. The DataLinkCleanupTask will remove the
          associations based on the snapshot. This would fix the problem that new
          associations are removed while removing the old associations due to a failed
          connection. The problem occurs when actual removal is performed with a delay
          after the datalink lost its connection.

        * dds/DCPS/transport/framework/DataLinkCleanupTask.h: