@@ -46,14 +46,18 @@ if (PerlACE::waitforfile_timed ($dcpsrepo_ior, 30) == -1) {
 
 $Publisher->Spawn ();
     
-open (DATA, $data_file);
+if (PerlACE::waitforfile_timed ($data_file, 30) == -1) {
+    print STDERR "ERROR: waiting for Publisher file\n";
+    $Publisher->Kill ();
+    $DCPSREPO->Kill ();
+    exit 1;
+}
 
-while ($line = <DATA>)
-{
- if ($line =~ /Done writing/)
-   {
-    break;
-   }
+if (PerlACE::waitforfileoutput_timed ($data_file, "Done writing", 90) == -1) {
+    print STDERR "ERROR: waiting for Publisher output.\n";
+    $Publisher->Kill ();
+    $DCPSREPO->Kill ();
+    exit 1;
 }
 
 #Sleep for 2 seconds after publisher send all samples to avoid the timing issue
