@@ -1,3 +1,13 @@
+Tue Jul 08 18:56:19 UTC 2008  Trevor Fields  <fields_t@ociweb.com>
+
+        * tests/DCPS/Lifespan/run_test.pl:
+        * tests/DCPS/Partition/run_test.pl:
+        * tests/DCPS/TransientDurability/run_test.pl:
+        * tests/DCPS/TransientLocalTest/run_test.pl:
+
+          Changed tests to use the PERLACE::waitforfileoutput_timed
+          method.
+
 Thu Jul 03 18:40:52 UTC 2008  Trevor Fields  <fields_t@ociweb.com>
 
         * tests/DCPS/Compiler/idl_test1_lib/FooDef.idl:
